fix for scrollbar (#11)

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -66,6 +66,7 @@
 			@include ifLargerThan(large) {
 				flex-basis: calc(100% - #{map-get($sidebar-width, medium)});
 				max-width: calc(#{map-get($breakpoints, large)});
+				overflow-x: unset;
 			}
 		}
 	}
